--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        header
+    </header>
 <div id="box"> </div>
     <h1>salam</h1>
     <script src="index.js"></script>
