--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        block1
+    </div>
 <div id="box"> </div>
 <h1>privet</h1>
     <script src="index.js"></script>
